# cmake-protobuf-example

./: CMakeLists.txt  README.md  main.cpp
my_app_protocol/: CMakeLists.txt
my_app_protocol/my_app_protocol/: my_app_protocol.proto
my_protocol/: CMakeLists.txt
my_protocol/my_protocol/: my_protocol.proto
